# wasmcloud-longrunning-jobs

./: Cargo.toml  wasmcloud.toml
examples/test-component/: .gitignore  Cargo.toml  wadm.yaml  wasmcloud.toml
examples/test-component/src/: lib.rs
examples/test-component/wit/: deps.toml  world.wit
longrunning-wit/: README.md
longrunning-wit/wit/: deps.toml  longrunning.wit  world.wit
src/: config.rs  longrunning.rs  main.rs  operation.rs
wit/: deps.toml  provider.wit
