[package]
name = "test-long-running"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
axum = {version = "0.7", default-features = false}
#axum-extra = {version = "0.9", default-features = false}
bytes = {version = "1", features = ["serde"]}
http = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wit-bindgen = { version = "0.24", features = ["default"] }
tokio = { version = "1", features = ["rt"]}
tower-service = "0.3"

[profile.release]
lto = true
opt-level = "z"
strip = true
